WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205101
Fixed Pattern.h compile error
https://bugs.webkit.org/show_bug.cgi?id=205101
Summary
Fixed Pattern.h compile error
cathiechen
Reported
2019-12-10 21:47:10 PST
We need to include "Image.h" for ImageHandle.
Attachments
Patch
(1.11 KB, patch)
2019-12-10 21:51 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
cathiechen
Comment 1
2019-12-10 21:51:46 PST
Created
attachment 385346
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-10 22:37:14 PST
Comment on
attachment 385346
[details]
Patch Clearing flags on attachment: 385346 Committed
r253362
: <
https://trac.webkit.org/changeset/253362
>
WebKit Commit Bot
Comment 3
2019-12-10 22:37:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug