Fixed Pattern.h compile error https://bugs.webkit.org/show_bug.cgi?id=205101

Need to include "Image.h" to use ImageHandle.

Unreviewed, fixed compile error.


* platform/graphics/Pattern.h:


Canonical link: https://commits.webkit.org/218302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253362 268f45cc-cd09-0410-ab3c-d52691b4dbfc